Updates to make homepage year-neutral

--- a/2018.md
+++ b/2018.md
@@ -20,3 +20,15 @@ Yoyo Zhou is a caller and organizer from the Bay Area who is known for his thoug
 ### Schedule
 
 You can download a PDF of the schedule [here](/schedule.pdf).
+
+### Cost
+
+Because we wanted this event to be available to everyone, NextGen had a sliding scale, so campers decided how much makes sense for their financial situation.  Below are suggestions, paired with how they related to our expenses and who we suggest pay these amounts, but campers were welcome to pay anything above our minimum of $125.  
+
+**Minimum:  $125** -  Suggested for students, people with debt, and other people for whom coming to camp is a financial strain.
+
+**Break even:  $185** - This is the rough break even cost per person.  If you can afford to pay this amount, please do!  If you can't afford this amount, please pay less!
+
+**A little extra:  $245** - This covers the break even cost for you plus some of the cost to bring someone else.  If you're financially comfortable and secure, we recommend paying this amount (or more!).  We also recommend paying at least this amount if you are 40 or older.
+
+**Bring a friend:  $370** - This covers your cost plus the cost of one other person.  If you love the mission of helping build community and leadership among young people in the dance community and can afford it, this amount will help us continue to make camp sustainable, and make it accessible to more people.
